--- a/ui/pages/contact.html
+++ b/ui/pages/contact.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name='copyright' content=''>
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<link rel="stylesheet" type="text/css" href="../libs/font-awesome-4.7.0/css/font-awesome.min.css" />
-	<link rel="stylesheet" type="text/css" href="../css/main.css">
+	<link rel="stylesheet" type="text/css" href="./libs/font-awesome-4.7.0/css/font-awesome.min.css" />
+	<link rel="stylesheet" type="text/css" href="./css/main.css">
 </head>
 <body>
 <section class="navigation">
@@ -19,7 +19,8 @@
 				<li class="navbar-nav"><a class="nav-link" href="plofile.html">About Me</a> </li>
 				<li class="navbar-nav"><a class="nav-link" href="contact.html">Contact</a> </li>
 				<li class="navbar-nav"><a class="nav-link" href="blog.html">Blog</a> </li>
-				<li class="navbar-nav"><a class="nav-link" href="login.html">Sign in</a> </li>
+				<li class="navbar-nav" id="showsignIn"><a class="nav-link" href="login.html">Sign in</a> </li>
+				<li class="navbar-nav"  id="showplofile"><a class="nav-link" href="account.html">Account</a> </li>
 			</ul>
 		</nav>
 	</section>
@@ -93,5 +94,6 @@
        <script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-firestore.js"></script>
 	   <script type="text/javascript" src="js/firebase.js"></script>
 		<script type="text/javascript" src="js/main.js"></script>
+		<script type="text/javascript" src="js/auth.js"></script>
 </body>
 </html>
