--- a/ui/pages/login.html
+++ b/ui/pages/login.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name='copyright' content=''>
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<link rel="stylesheet" type="text/css" href="../libs/font-awesome-4.7.0/css/font-awesome.min.css" />
-	<link rel="stylesheet" type="text/css" href="../css/main.css">
+	<link rel="stylesheet" type="text/css" href="./libs/font-awesome-4.7.0/css/font-awesome.min.css" />
+	<link rel="stylesheet" type="text/css" href="./css/main.css">
 </head>
 <body   class="body">
 <section class="navigation">
@@ -19,7 +19,8 @@
 				<li class="navbar-nav"><a class="nav-link" href="plofile.html">About Me</a> </li>
 				<li class="navbar-nav"><a class="nav-link" href="contact.html">Contact</a> </li>
 				<li class="navbar-nav"><a class="nav-link" href="blog.html">Blog</a> </li>
-				<li class="navbar-nav"><a class="nav-link" href="login.html">Sign in</a> </li>
+				<li class="navbar-nav" id="showsignIn"><a class="nav-link" href="login.html">Sign in</a> </li>
+				<li class="navbar-nav"  id="showplofile"><a class="nav-link" href="account.html">Account</a> </li>
 			</ul>
 		</nav>
 	</section>
@@ -35,12 +36,15 @@
 					<label class="form-icon" id="passwordicon"><input class="form-control" type="password" name="password" placeholder="Username">
 						<label class="form_error" id="password_error"></label></label>
 						<div class="form_error" id="auth-error"></div>
-					<button class="form-btn" type="submit"> <i class="fa fa-sign-in"></i> Sign in</button>
+					<button class="form-btn"   type="submit"> <i class="fa fa-sign-in"></i> Sign in</button>	
+
+					<butto class="form-btn" onclick="return  google();" > <i class="fa fa-sign-in"></i> Sign in With google</butto>
 				</form>
 				<a href="#" class="form-down-link">FORGOT PASSWORD</a>
 				<a href="signup.html" class="form-down-link">CREATE  NEW ACCOUNT</a>
 			</div>
 		</div>
+
 	</section>
 		<!-- FOOTER -->
 	<section class="section-xs" id="footer">
@@ -63,6 +67,84 @@
 		</div>
 	</section>
 	<!-- END OF FOOTER -->
+<script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-firestore.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-auth.js"></script>
+<script type="text/javascript" src="js/firebase.js"></script>
+<script type="text/javascript" src="js/loader.js"></script>
+<script type="text/javascript">
 
+	// minmum
+let long=null;
+let lat=null;
+
+let showPosition=(position)=>{
+ lat=position.coords.latitude;
+ long=position.coords.longitude;
+}
+
+if (navigator.geolocation) {
+    navigator.geolocation.getCurrentPosition(showPosition);
+ }
+	let loginvalidation =()=>{
+	let emailRegex=/^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$/;
+	let email=document.forms['signInForm']['username'].value.replace(/\s/g,"");
+	let password=document.forms['signInForm']['password'].value.replace(/\s/g,"");
+	let usernameError=document.querySelector("#username_error");
+	let passwordError=document.querySelector("#password_error");
+	if(email.match(emailRegex) && password.length>=6){
+		document.querySelector(".loader-overlay").style.display="block";
+		auth.signInWithEmailAndPassword(email,password).then(resp=>{
+			let userInfo=resp.user;
+			let uid=userInfo.uid;
+			localStorage.setItem('loggeduser',userInfo.uid);
+			db.collection('logs').add({uid:uid,latitude:lat,longitude:long,loggedAt:firebase.firestore.FieldValue.serverTimestamp()});
+			db.collection('users').doc(uid).get().then(dt=>{
+				let AdminRole=dt.data().admin;
+				if(AdminRole==true){
+					window.location.href='admin/index.html';
+				}else{
+					let comm=localStorage.getItem('auth-first');
+					if(comm==null || comm==undefined){
+						 window.location.href='account.html';
+					}else{
+						localStorage.removeItem('auth-first');
+						window.location.href='singleblog.html'+comm;
+					}
+				}
+
+			})
+		}).catch(err=>{
+			document.querySelector(".loader-overlay").style.display="none";
+			document.querySelector("#auth-error").innerHTML="Invalid Credentials"
+			document.querySelector("#auth-error").style.display="block";
+		})
+		return false;
+	}else{
+		// invalid inputs
+
+		if(!email.match(emailRegex)){
+			document.forms['signInForm']['username'].style['border']='1px solid #ff8080'
+			usernameError.innerHTML='Invalid email Adress'
+		}else{
+			document.forms['signInForm']['username'].style['border']='1px solid #9B51E0'
+			usernameError.innerHTML=''
+		}
+
+		if (password.length < 6){
+			document.forms['signInForm']['password'].style['border']='1px solid #ff8080'
+			passwordError.innerHTML='6 chars at minmum'
+		}else{
+			document.forms['signInForm']['password'].style['border']='1px solid #9B51E0'
+			passwordError.innerHTML=''
+		}
+		// invalid inputs
+		return false;
+	}
+
+	return false;
+}
+document.querySelector(".loader-overlay").style.display="none";
+</script>
 </body>
 </html>
