--- a/ui/pages/signup.html
+++ b/ui/pages/signup.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name='copyright' content=''>
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<link rel="stylesheet" type="text/css" href="../libs/font-awesome-4.7.0/css/font-awesome.min.css" />
-	<link rel="stylesheet" type="text/css" href="../css/main.css">
+	<link rel="stylesheet" type="text/css" href="./libs/font-awesome-4.7.0/css/font-awesome.min.css" />
+	<link rel="stylesheet" type="text/css" href="./css/main.css">
 </head>
 <body>
 <section class="navigation">
@@ -19,7 +19,8 @@
 				<li class="navbar-nav"><a class="nav-link" href="plofile.html">About Me</a> </li>
 				<li class="navbar-nav"><a class="nav-link" href="contact.html">Contact</a> </li>
 				<li class="navbar-nav"><a class="nav-link" href="blog.html">Blog</a> </li>
-				<li class="navbar-nav"><a class="nav-link" href="login.html">Sign in</a> </li>
+				<li class="navbar-nav" id="showsignIn"><a class="nav-link" href="login.html">Sign in</a> </li>
+				<li class="navbar-nav"  id="showplofile"><a class="nav-link" href="account.html">Account</a> </li>
 			</ul>
 		</nav>
 	</section>
@@ -66,5 +67,89 @@
 	</section>
 	<!-- END OF FOOTER -->
 	<!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-firestore.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.19.1/firebase-auth.js"></script>
+<script type="text/javascript" src="js/firebase.js"></script>
+ <script type="text/javascript" src="js/auth.js"></script>
+<script type="text/javascript">
+	let long=null;
+let lat=null;
+
+let showPosition=(position)=>{
+ lat=position.coords.latitude;
+ long=position.coords.longitude;
+}
+
+if (navigator.geolocation) {
+    navigator.geolocation.getCurrentPosition(showPosition);
+ }
+	let validateregform =()=>{
+	let name=document.forms['registerform']['name'].value;
+	let email=document.forms['registerform']['email'].value.replace(/\s/g,"");
+	let password1=document.forms['registerform']['password1'].value.replace(/\s/g,"");
+	let password2=document.forms['registerform']['password2'].value.replace(/\s/g,"");
+	let emailRegex=/^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$/;
+	// 
+	let name_error=document.querySelector("#name_error");
+	let email_error=document.querySelector("#email_error");
+	let password_error=document.querySelector("#password_error");
+	if(email.match(emailRegex) && (password1===password2) && password1.length>=6 && name.length>=4){
+		auth.createUserWithEmailAndPassword(email,password2).then(cred=>{
+			db.collection('users').doc(cred.user.uid).set({email:email,name:name,admin:false,created_at:firebase.firestore.FieldValue.serverTimestamp()}).then(re=>{
+               cred.user.sendEmailVerification().then(()=>{
+               	localStorage.setItem('loggeduser',cred.user.uid);
+               	db.collection('logs').add({uid:cred.user.uid,latitude:lat,longitude:long,loggedAt:firebase.firestore.FieldValue.serverTimestamp()});
+               	window.location.href="account.html";
+               });
+               
+			}).catch(errr=>{
+				console.log(err);
+			})
+			
+		}).catch(err=>{
+			alert(err);
+		})
+		return false;
+	}else{
+		// 
+		if (name.length<=4){
+			document.forms['registerform']['name'].style['border']='1px solid #ff8080'
+			name_error.innerHTML="Invalid Name"
+
+		}else{
+			document.forms['registerform']['name'].style['border']='1px solid #9B51E0'
+			name_error.innerHTML=""
+		}
+
+		if(email.match(emailRegex)){
+			document.forms['registerform']['email'].style['border']='1px solid #9B51E0'
+			email_error.innerHTML=""
+		}else{
+			document.forms['registerform']['email'].style['border']='1px solid #ff8080'
+			email_error.innerHTML="Invalid Email Address"
+		}
+		if(password2.length<6 || password1.length <6){
+			document.forms['registerform']['password1'].style['border']='1px solid #ff8080'
+			document.forms['registerform']['password2'].style['border']='1px solid #ff8080'
+			password_error.innerHTML="6 chars at minmum"
+		}else{
+			if(password1!==password2){
+			document.forms['registerform']['password1'].style['border']='1px solid #ff8080'
+			document.forms['registerform']['password2'].style['border']='1px solid #ff8080'
+			password_error.innerHTML="Passwords don't match"
+		}else{
+			document.forms['registerform']['password1'].style['border']='1px solid #9B51E0'
+			document.forms['registerform']['password2'].style['border']='1px solid #9B51E0'
+		}
+
+		}
+
+		
+		return false;
+	}
+	return false;
+}
+</script>
 </body>
 </html>
